--- a/snowflake-deployment.mdx
+++ b/snowflake-deployment.mdx
@@ -83,6 +83,13 @@ GRANT OWNERSHIP ON DATABASE IDENTIFIER($DB_NAME) TO IDENTIFIER($ROLE_NAME);
 GRANT ROLE IDENTIFIER($ROLE_NAME) TO USER IDENTIFIER($USER_NAME);
 ```
 
+Please share:
+
+- The `USER_NAME` and `PASSWORD` with us securely via an encrypted message following [using GPG](/docs/public-key).
+- The `WAREHOUSE_NAME`, `DB_NAME`, `SCHEMA_NAME`, and `ROLE_NAME` so that we can configure the Chalk platform to use them.
+- Your Snowflake account name (`select current_account_name();`) and organziation name (`select current_organization_name();`).
+
+
 ## Storage Integration Setup
 
 Once we have created the warehouse, database, schema, user, and role, the next step
