Fix trivial typo

--- a/docker.mdx
+++ b/docker.mdx
@@ -69,7 +69,7 @@ the image, and for installing your requirements with pip.
 ## Python Version
 
 The Python version for a Chalk project is set at the project level.
-The version is set with the `.chalk.yml` file in your project repo.
+The version is set with the `chalk.yml` file in your project repo.
 Chalk supports both `python310` and `python311` as values for `runtime`:
 
 ```yaml
