--- a/best-practices.mdx
+++ b/best-practices.mdx
@@ -59,7 +59,7 @@ class User:
 
 You can also apply restrictions or enforce feature annotation for your project. For instance, you can prevent deployment if features are not tagged or described.
 
-### Add validations for your features
+### Add Validations For Your Features
 
 Validations for your feature can prevent bad data from incorrect written to the offline store. Besides monitoring, it can be an even stricter way of ensuring that nothing is going wrong with the feature you are calculating.
 
@@ -105,17 +105,15 @@ Don't worry about converting the Chalk DataFrame to pandas or polars: transforma
 
 ### Run Simple Queries With The Chalk CLI, For More Flexibility Use One of Chalk's Clients
 
+The chalk cli should only be used to run simple online queries. For more complex use cases, you should use one of Chalk's clients.
+
 ### Use a Chalk Client to execute Offline_queries
 
 Offline queries can only be executed through one of the chalk clients
 
 ### Created named queries for your commonly executed queries
 
-this will make them easier to track,
-
-### Create and share datasets with offline queries
-
-### poll triggered queries to make sure they've executed successfully.
+[Naming queries](link to naming queries) makes it easier to evaluate and track the performance of a specific queries over time,
 
 ## Deployment
 
@@ -123,11 +121,36 @@ this will make them easier to track,
 
 The branch server should be used to test that your deployments and new featuers are behaving as expected.
 
-### Use the same codebase for dev, staging, and prod. Distinct functionality between the three can be handled via decorators and resolvers that operate in only one feature space.
-
 ### To get started, we recommend the following repository structure:
 
+```
+chalk_repo/
+├── chalk.yaml
+├── features.py
+├── model.joblib
+└── resolvers.py
+```
+
 ### To access custom files in your deployments use the TARGET_ROOT environment variable. If you want to make sure a globally defined variable is accessible before any of your resolvers run, use the before_all decorator.
+
+Global setup for resolver should be done through a function decorated with the [@before_all decorator](). This also allows for unique setups for different environments.
+
+### Custom Files Such As Models Should Be Accessed With The TARGET_ROOT Environment Variable
+
+Additionally to access files packaged in your chalk deployments, use the TARGET_ROOT environment variable to fully specify the path to your files.
+
+For instance, if you have the following directory which you are deploying to Chalk:
+```
+example/
+├── chalk.yaml
+├── features.py
+├── model.joblib
+└── resolvers.py
+```
+You would access the model.joblib file as follows:
+```python
+model_file_path=f"{os.environ['TARGET_ROOT']}/model.joblib"
+```
 
 ## Observability / Testing
 
@@ -142,3 +165,5 @@ Monitoring will help you catch tricky bugs early and increase your confidence in
 ## Security
 
 ### Generate and use access token to set and restrict the permissions for your different users.
+
+Chalk users should be given access through access tokens: these can be programatically generated through chalk clients or in the web UI. Give your users only the permissions they need.
